# pidgin-mistral-ai

./: Makefile.am  README.md  autogen.sh  configure.ac  package-deb.sh  plugins.mk
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compile-test.yml  deb-package-test.yml
src/: Makefile.am  mistral.c
